# aiworkspace

./: .gitignore  CLAUDE.md  README.md  index.html  monocode-architecture.md  package-lock.json  package.json  tasks.json  tsconfig.json  vite.config.ts
.aiworkspace/: workspace.json
.claude/rules/: code-conventions.md  frontend-conventions.md
.claude/skills/commit/: SKILL.md
scripts/: setup.sh
src/: App.tsx  CLAUDE.md
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  config_tests.rs  lib.rs  main.rs  mcp_bridge.rs  mcp_bridge_tests.rs  mcp_main.rs  mcp_server.rs  mcp_tools.rs  mcp_tools_tests.rs  pty_manager.rs
src-tauri/src/commands/: browser.rs  environment.rs  environment_tests.rs  fs.rs  git.rs  http.rs  mod.rs  projects.rs  projects_tests.rs  settings.rs  terminal.rs
src-tauri/test/: .gitignore
src-tauri/test/.monocode/: workspace.json
src/components/EnvironmentSwitcher/: index.tsx
src/components/ProjectList/: index.tsx
src/components/SettingsModal/: index.tsx
src/components/StatusBar/: index.tsx
src/components/Workspace/: RightPanel.tsx  SidePanel.tsx  TerminalContainer.tsx  TopBar.tsx  index.tsx
src/lib/: httpExecutor.test.ts  httpExecutor.ts  mcpBridge.test.ts  mcpBridge.ts  resolveVariables.test.ts  resolveVariables.ts  sendToClaudeCode.test.ts  sendToClaudeCode.ts
src/store/: environment.test.ts  environment.ts  projects.test.ts  projects.ts  settings.ts  workspace.test.ts  workspace.ts  workspaces.test.ts  workspaces.ts
(+17 files in other folders)
