[package]
name = "monocode"
version = "0.1.0"
edition = "2021"

[lib]
name = "monocode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "monocode"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
regex = "1"

[[bin]]
name = "monocode-mcp"
path = "src/mcp_main.rs"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
